--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
       margin-right: 0; 
     }
   </style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
   <style>
+    }
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     #map {
         height: 600px; /* Adjust the height of the map */
         width: 100%;
-    }
   </style>
 </head>
 <body class="quarto-light">
@@ -913,6 +913,59 @@
 </div>
 <div class="absolute" style="bottom: 0%; right: -2%; ">
 <p><span style="color: black;">5</span></p>
+</div>
+</section>
+<section id="bicome-project" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME project</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">5</span></p>
+</div>
+<div class="absolute" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/BiCOME_background.png" width="1200"></p>
+</div>
+<div class="absolute" style="top: 10%; left: 50%; ">
+<p><img data-src="Images/PML_logo.png" width="500"></p>
+</div>
+<div class="absolute" style="top: 30%; left: 50%; ">
+<p><img data-src="Images/UN_logo.png" width="450"></p>
+</div>
+<div class="absolute" style="top: 50%; left: 53%; ">
+<p><img data-src="Images/DLR_logo.png" height="200"></p>
+</div>
+<div class="absolute" style="top: 77%; left: 51%; ">
+<p><img data-src="Images/Hygeos_Logo.png" width="450"></p>
+</div>
+<div class="absolute" style="font-size: 40px;top: 47%; width: 1200px; ">
+<ul>
+<li>Identify and characterise critical applications (Pilot Studies) of remote sensing to study coastal biodiversity.</li>
+</ul>
+</div>
+<div class="absolute" style="font-size: 40px;top: 55%; width: 1200px; ">
+<ul>
+<li>Evaluate existing and planned sensor capabilities for each Pilot Study.</li>
+</ul>
+</div>
+<div class="absolute" style="font-size: 40px;top: 63%; width: 1200px; ">
+<ul>
+<li>Define the activities necessary to utilise current and planned sensors to detect measures of marine biodiversity; or define new approaches, if the existing ones are not considered capable to fulfil the targeted science objectives.</li>
+</ul>
+</div>
+<div class="absolute" style="font-size: 40px;top: 11%; left: 75%; width: 400px; ">
+<p>Project coordination and management and Pelagic case lead</p>
+</div>
+<div class="absolute" style="font-size: 40px;top: 32%; left: 75%; ">
+<p>Intertidal lead</p>
+</div>
+<div class="absolute" style="font-size: 40px;top: 57%; left: 75%; ">
+<p>Sub-tidal lead</p>
+</div>
+<div class="absolute" style="font-size: 40px;top: 81%; left: 75%; ">
+<p>EO corrections lead</p>
 </div>
 </section>
 <section id="challenges-to-map-intertidal-vegetation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
@@ -2264,6 +2317,319 @@ tr:nth-child(4) {
 <div class="fragment fade-in absolute" data-fragment-index="3" style="top: 40%; left: 70%; ">
 <p><img data-src="Images/Micasense.png" width="500"></p>
 </div>
+</section>
+<section id="lectures-and-praticals" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Lectures and Praticals</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4 5</span> 6</p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">26</span></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 5%; left: 0%; ">
+<ul>
+<li>September 2023:
+<ul>
+<li>Fieldwork with Master 2 students in The Traict du Croisic : 1 day</li>
+</ul></li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 5%; left: 0%; ">
+<ul>
+<li>September 2023:
+<ul>
+<li>Fieldwork with Master 2 students in The Traict du Croisic : 1 day</li>
+<li>Introduction to remote Sensing to Master 2 students: 8h</li>
+</ul></li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="top: 5%; left: 0%; ">
+<ul>
+<li>September 2023:
+<ul>
+<li>Fieldwork with Master 2 students in The Traict du Croisic : 1 day</li>
+<li>Introduction to remote Sensing to Master 2 students: 8h</li>
+<li>Fieldwork with Master 2 students in Bourgneuf Bay : 1 day</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="1" style="top: 50%; left: 10%; ">
+<p><video data-src="Videos/Oysters_fieldwork.mp4" height="600" controls=""><a href="Videos/Oysters_fieldwork.mp4">Video</a></video></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 5%; left: 0%; ">
+<ul>
+<li>September 2023:
+<ul>
+<li>Fieldwork with Master 2 students in The Traict du Croisic : 1 day</li>
+<li>Introduction to remote Sensing to Master 2 students: 8h</li>
+<li>Fieldwork with Master 2 students in Bourgneuf Bay : 1 day</li>
+</ul></li>
+<li>May 2023:
+<ul>
+<li>Practicals in quantitative ecology to 3rd year students: 10h</li>
+</ul></li>
+</ul>
+</div>
+</section>
+<section id="conferences-and-workshops" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Conferences and Workshops</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4 5</span> 6</p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">27</span></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>August 2023, Brest</strong> :
+<ul>
+<li>8th European Phycological Congress (1 week)</li>
+</ul></li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>August 2023, Brest</strong> :
+<ul>
+<li>8th European Phycological Congress (1 week)</li>
+</ul></li>
+<li><strong>November 2023, Frascati</strong> :
+<ul>
+<li>EC-ESA Joint Earth System Science Initiative (1 week)</li>
+</ul></li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>August 2023, Brest</strong> :
+<ul>
+<li>8th European Phycological Congress (1 week)</li>
+</ul></li>
+<li><strong>November 2023, Frascati</strong> :
+<ul>
+<li>EC-ESA Joint Earth System Science Initiative (1 week)</li>
+</ul></li>
+<li><strong>June 2023, Napoli</strong> :
+<ul>
+<li>Word Seagrass Conference (1 week)</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="1" style="top: 15%; right: 0%; ">
+<p><img data-src="Images/poster_BiCOME.png" width="800"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="2" style="top: 37%; left: 30%; ">
+<p><img data-src="Images/EC_ESA.jpeg" height="770"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="2" style="top: 37%; left: 5%; ">
+<p><img data-src="Images/Poster_Frascati.jpg" height="770"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="3" style="top: 50%; left: 25%; ">
+<p><img data-src="Images/WSC.png" width="600"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="1" style="top: 20%; left: 15%; ">
+<p><img data-src="Images/PosterEPC.jpg" height="1000"></p>
+</div>
+</section>
+<section id="side-tasks" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Side tasks</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4 5</span> 6</p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">28</span></p>
+</div>
+<div class="fragment fade-out" data-fragment-index="3">
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>June 2023</strong> :
+<ul>
+<li>Learning and Intercalibration exercice with the EPHE Dinard and LeCNAM Cherbourg</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="1" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Collin1.jpeg" height="1000"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="1" style="top: 20%; right: 0%; ">
+<p><img data-src="Images/Collin2.jpeg" height="1000"></p>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="2" style="top: 20%; right: 10%; ">
+<p><video data-src="Videos/Drone_slowmo.mp4" height="1000" controls=""><a href="Videos/Drone_slowmo.mp4">Video</a></video></p>
+</div>
+</div>
+<div class="fragment fade-out" data-fragment-index="5">
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>September 2023</strong> :
+<ul>
+<li>Mapping of Goose Barnacle in Vigo, Spain</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="3" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Vigo1.jpeg" height="1000"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="3" style="top: 35%; right: 0%; ">
+<p><video data-src="Videos/Marta_Sampling.mp4" height="600" controls=""><a href="Videos/Marta_Sampling.mp4">Video</a></video></p>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="4" style="top: 20%; left: 0%; ">
+<p><video data-src="Videos/Vigo_Site1.mp4" height="700" controls=""><a href="Videos/Vigo_Site1.mp4">Video</a></video></p>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="4" style="bottom: 0%; right: -2%; ">
+<p><video data-src="Videos/Vigo_Site2.mp4" height="700" controls=""><a href="Videos/Vigo_Site2.mp4">Video</a></video></p>
+</div>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="5" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>September 2023</strong> :
+<ul>
+<li>Mapping of <em>Sabellaria alveolata</em> reefs in Noirmoutier Island</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="5" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Sabellaria2.jpeg" height="500"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="5" style="top: 58%; left: 0%; ">
+<p><img data-src="Images/Sabellaria1.jpeg" height="500"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="5" style="top: 20%; left: 30%; ">
+<p><img data-src="Images/Sabel1.png" height="500"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="5" style="top: 58%; left: 30%; ">
+<p><img data-src="Images/Sabel2.png" height="500"></p>
+</div>
+<div class="fragment fade-out" data-fragment-index="9">
+<div class="absolute fragment fade-in" data-fragment-index="6" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>October 2023</strong> :
+<ul>
+<li>Fish Farms and Archaeological Remains, Greece</li>
+</ul></li>
+</ul>
+</div>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="6" style="top: 20%; left: -3%; ">
+<p><video data-src="Videos/Fish_Farm_2.mp4" height="730" controls=""><a href="Videos/Fish_Farm_2.mp4">Video</a></video></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="6" style="bottom: 5%; right: -3%; ">
+<p><video data-src="Videos/Fish_Farm_1.mp4" height="730" controls=""><a href="Videos/Fish_Farm_1.mp4">Video</a></video></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="7" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Tainaron3.jpg" height="500"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="7" style="top: 58%; left: 0%; ">
+<p><img data-src="Images/Tainaron2.jpg" height="500"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="7" style="top: 20%; left: 50%; ">
+<p><img data-src="Images/Tainaron3.png" height="1000"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="7" style="top: 20%; right: 5%; ">
+<p><img data-src="Images/Tainaron4.png" height="1000"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="8" style="bottom: 5%; right: 17%; ">
+<p><video data-src="Videos/Tainaron_model.mp4" height="900" controls=""><a href="Videos/Tainaron_model.mp4">Video</a></video></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="9" style="top: 5%; left: 0%; ">
+<ul>
+<li><strong>February 2024</strong> :
+<ul>
+<li>BiCOME Final Meeting</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="9" style="top: 20%; right: 20%; ">
+<p><img data-src="Images/BiCOME_Final_Meeting.jpeg" height="1000"></p>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="9" style="top: 30%; left: 0%; ">
+<p><img data-src="Images/Logo_BICOME.png" height="400"></p>
+</div>
+</section>
+<section id="list-of-paper-published-since-january-2022" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">List of paper published since January 2022</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4 5</span> 6</p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">29</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 5%; left: 0%; ">
+<p><img data-src="Images/Paper/Brunier1.png" width="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 25%; left: 0%; ">
+<p><img data-src="Images/Paper/Brunier2.png" width="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 47%; left: 0%; ">
+<p><img data-src="Images/Paper/Zoffoli.png" width="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 72%; left: 0%; ">
+<p><img data-src="Images/Paper/Bede1.png" width="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 72%; left: 0%; ">
+<p><img data-src="Images/Paper/Bede1.png" width="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="top: 10%; right: 10%; ">
+<p><img data-src="Images/Paper/Nurdin.png" width="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="6" style="top: 35%; right: 10%; ">
+<p><img data-src="Images/Paper/Roman_et_al2023.png" width="1000"></p>
+</div>
+</section>
+<section id="list-of-paper-submitted-or-soon-since-january-2022" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">List of paper Submitted (or soon) since January 2022</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4 5</span> 6</p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">29</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 40px; line-height: 1;top: 10%; left: 5%; width: 1100px; ">
+<ul>
+<li>Discriminating Seagrasses From Green Macroalgae in European Intertidal Areas using High Resolution Multispectral Drone Imagery</li>
+</ul>
+<p><span style="font-size: 25px;">Simon Oiry, Bede Ffinian Rowe Davies, Philippe Rosa, Ana Sousa, Pierre Gernez, Laurent Barillé</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 40px; line-height: 1;top: 28%; left: 5%; width: 1100px; ">
+<ul>
+<li>A Sentinel Watching Over Inter-Tidal Seagrass Phenology Across Western Europe and North Africa.</li>
+</ul>
+<p><span style="font-size: 25px;">Bede Ffinian Rowe Davies, Simon Oiry, Ana Sousa, Philippe Rosa, Pierre Gernez, Laurent Barillé …</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="font-size: 40px; line-height: 1;top: 46%; left: 5%; width: 1100px; ">
+<ul>
+<li>Intertidal Seagrass Extent from Sentinel-2 Time-Series Show Distinct Trajectories in Western Europe.</li>
+</ul>
+<p><span style="font-size: 25px;">Bede Ffinian Rowe Davies, Simon Oiry, Phillipe Rosa, Maria Laura Zoffoli, Ana I Sousa, Oliver R Thomas, Dan A Smale, Melanie C Austen, Lauren Bierann, Martin J Attrill, Alejandro Roman, Gabriel Navarro, Anne-Laure Barillé, Nicolas Harin, Daniel Clewley, Victor Martinez Vicente, Pierre Gernez, Laurent Barillé</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="font-size: 40px; line-height: 1;top: 70%; left: 5%; width: 1100px; ">
+<ul>
+<li>Mapping Microphytobenthos Biomass with Very High-Resolution Remote Sensing Imagery in Estuarine Systems</li>
+</ul>
+<p><span style="font-size: 25px;">Alejandro Román, Simon Oiry, Bede F. R. Davies, Philippe Rosa, Pierre Gernez, Antonio Tovar-Sánchez, Laurent Barillé, Gabriel Navarro, Vona Méléder, Laurent Barillé</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="font-size: 40px; line-height: 1;top: 15%; left: 60%; width: 1100px; ">
+<ul>
+<li>Site Selection for off-shore macroalgae aquaculture on the french Atlantic Coast</li>
+</ul>
+<p><span style="font-size: 25px;">Graciela Medina Madariaga, Mathilde FALCOU-PREFOL, Simon OIRY, Laura ZOFFOLI, Joël FLEURENCE, Pierre GERNEZ, Laurent BARILLÉ</span></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="6" style="font-size: 40px; line-height: 1;top: 33%; left: 60%; width: 1100px; ">
+<ul>
+<li>Seasonal variability of Kappaphycus alvarezii cultivation in South-Sulawesi (Indonesia): water quality, growth and colour quantification</li>
+</ul>
+<p><span style="font-size: 25px;">Laurent Barillé, Iona Paterson, Simon Oiry, Agus ARIS, Elisabeth Cook-Cottier, Nurjannah Nurdin</span></p>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
@@ -2673,8 +3039,8 @@ tr:nth-child(4) {
       }
     });
     </script>
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     
 
 </body></html>
