--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
       margin-right: 0; 
     }
   </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
   <style>
-    }
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     #map {
         height: 600px; /* Adjust the height of the map */
         width: 100%;
+    }
   </style>
 </head>
 <body class="quarto-light">
@@ -1242,7 +1242,7 @@ tr:nth-child(4) {
 <p>~ 1.5 millions pixels</p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="3" style="top: 25%; right: -2%; ">
-<p><img data-src="Images/table_training_px.png" height="350"></p>
+<p><img data-src="Images/table_training_px.png" height="320"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="3" data-id="training_px" style="font-size: 50px;top: 65%; right: 2%; ">
 <p>~ 500 000 training pixels</p>
@@ -2264,15 +2264,15 @@ tr:nth-child(4) {
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
 </div>
 <div class="absolute fragment fade-out" data-fragment-index="1" style="font-size: 60px;top: 43%; left: 65%; width: 1000px; ">
-<p><strong>Recovery Period</strong> : Ambiant air temperature during <strong>X</strong> days</p>
+<p><strong>Recovery Period</strong> : Ambient air temperature during <strong>X</strong> days</p>
 </div>
 <div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="font-size: 60px;top: 10%; left: 0%; ">
 <p>During the experiment :</p>
 <ul>
 <li><strong>Leaves sampling</strong> :
 <ul>
-<li>triplicate at the begining and the end of the stress</li>
-<li>HPLS pigment concentration</li>
+<li>triplicate at the beginning and the end of the stress</li>
+<li>HPLC pigment concentration</li>
 </ul></li>
 </ul>
 </div>
@@ -2281,12 +2281,12 @@ tr:nth-child(4) {
 <ul>
 <li><strong>Leaves sampling</strong> :
 <ul>
-<li>triplicate at the begining and the end of the stress</li>
-<li>HPLS pigment concentration</li>
+<li>triplicate at the beginning and the end of the stress</li>
+<li>HPLC pigment concentration</li>
 </ul></li>
 <li><strong>Hyperspectral measurement</strong>:
 <ul>
-<li>In continous at low tide</li>
+<li>In continuous at low tide</li>
 </ul></li>
 </ul>
 </div>
@@ -2295,12 +2295,12 @@ tr:nth-child(4) {
 <ul>
 <li><strong>Leaves sampling</strong> :
 <ul>
-<li>triplicate at the begining and the end of the stress</li>
-<li>HPLS pigment concentration</li>
+<li>triplicate at the beginning and the end of the stress</li>
+<li>HPLC pigment concentration</li>
 </ul></li>
 <li><strong>Hyperspectral measurement</strong>:
 <ul>
-<li>In continous at low tide</li>
+<li>In continuous at low tide</li>
 </ul></li>
 <li><strong>Multispectral measurement</strong> :
 <ul>
@@ -2435,8 +2435,8 @@ tr:nth-child(4) {
 <p><img data-src="Images/PosterEPC.jpg" height="1000"></p>
 </div>
 </section>
-<section id="side-tasks" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Side tasks</h2>
+<section id="side-tasks-this-year" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Side tasks this year</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2 3 4 5</span> 6</p>
@@ -3039,8 +3039,8 @@ tr:nth-child(4) {
       }
     });
     </script>
-    <script src="script.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="script.js"></script>
     
 
 </body></html>
