--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
 </div>
 <div class="gradient_box" style="text-align: center; position: absolute; left: 50%; top: 70%; width: 450px; transform: translate(-50%, -50%)">
 <p><span style="color: black; font-size: 60px; font-weight: bold;">Simon Oiry</span></p>
-<p><span style="color: black; font-size: 55px; font-weight: bold;">Phd student</span></p>
+<p><span style="color: black; font-size: 55px; font-weight: bold;">PhD student</span></p>
 </div>
 <div class="gradient_box" style="text-align: center; position: absolute; left: 50%; top: 85%; width: 700px; transform: translate(-50%, -50%)">
 <p><span style="color: black;font-size: 55px; font-weight: bold;">Supervisor : Laurent Barillé</span> <span style="color: black;font-size: 55px; font-weight: bold;">Co-supervisor : Pierre Gernez</span></p>
 </div>
 <div class="gradient_box" style="text-align: center; position: absolute; left: 50%; top: 95%; width: 90%; transform: translate(-50%, -50%)">
-<p><span style="color: black;font-size: 55px; font-weight: bold;">Members of the Commitee : Stanislas Dubois &amp; Emanuele Organelli</span></p>
+<p><span style="color: black;font-size: 55px; font-weight: bold;">Members of the Committee : Stanislas Dubois &amp; Emanuele Organelli</span></p>
 </div>
 <div class="absolute" style="left: 5%; bottom: 35%; ">
 <p><img data-src="Images/nantes-universite.png" height="300"></p>
@@ -623,20 +623,20 @@
 <div class="fragment fade-in-then-out absolute" data-fragment-index="3" style="top: 35%; left: 45%; ">
 <ul>
 <li>Pheophyceae, Brown algae</li>
-<li>Chloropyceae, Green algae</li>
+<li>Chlorophyceae, Green algae</li>
 </ul>
 </div>
 <div class="fragment fade-in-then-out absolute" data-fragment-index="4" style="top: 35%; left: 45%; ">
 <ul>
 <li>Pheophyceae, Brown algae</li>
-<li>Chloropyceae, Green algae</li>
+<li>Chlorophyceae, Green algae</li>
 <li>Magnoliopsida, Seagrasses</li>
 </ul>
 </div>
 <div class="fragment fade-in-then-out absolute" data-fragment-index="5" style="top: 35%; left: 45%; ">
 <ul>
 <li>Pheophyceae, Brown algae</li>
-<li>Chloropyceae, Green algae</li>
+<li>Chlorophyceae, Green algae</li>
 <li>Magnoliopsida, Seagrasses</li>
 <li>Bracilariophyceae, Microphytobenthos</li>
 </ul>
@@ -644,7 +644,7 @@
 <div class="fragment fade-in-then-out absolute" data-fragment-index="6" style="top: 35%; left: 45%; ">
 <ul>
 <li>Pheophyceae, Brown algae</li>
-<li>Chloropyceae, Green algae</li>
+<li>Chlorophyceae, Green algae</li>
 <li>Magnoliopsida, Seagrasses</li>
 <li>Bracilariophyceae, Microphytobenthos</li>
 <li>Rhodophyceae, Red algae</li>
@@ -931,7 +931,7 @@
 </div>
 <div class="absolute" style="font-size: 40px;top: 47%; width: 1200px; ">
 <ul>
-<li>Identify and characterise critical applications (Pilot Studies) of remote sensing to study coastal biodiversity.</li>
+<li>Identify and characterize critical applications (Pilot Studies) of remote sensing to study coastal biodiversity.</li>
 </ul>
 </div>
 <div class="absolute" style="font-size: 40px;top: 55%; width: 1200px; ">
@@ -941,7 +941,7 @@
 </div>
 <div class="absolute" style="font-size: 40px;top: 63%; width: 1200px; ">
 <ul>
-<li>Define the activities necessary to utilise current and planned sensors to detect measures of marine biodiversity; or define new approaches, if the existing ones are not considered capable to fulfil the targeted science objectives.</li>
+<li>Define the activities necessary to utilize current and planned sensors to detect measures of marine biodiversity; or define new approaches, if the existing ones are not considered capable to fulfill the targeted science objectives.</li>
 </ul>
 </div>
 <div class="absolute" style="font-size: 40px;top: 11%; left: 75%; width: 400px; ">
@@ -1261,7 +1261,7 @@ tr:nth-child(4) {
 <p>Fast.ai workflow</p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;left: 44%; bottom: 29%; ">
-<p>Neurtal Network</p>
+<p>Neural Network</p>
 </div>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="3" style="top: 27%; left: 0%; ">
@@ -1499,7 +1499,7 @@ tr:nth-child(4) {
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 10%; left: 40%; ">
 <ul>
-<li><strong>Data avaibility in the paper</strong></li>
+<li><strong>Data availability in the paper</strong></li>
 </ul>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 18%; left: 40%; ">
@@ -1913,7 +1913,7 @@ tr:nth-child(4) {
 <p>Fast.ai workflow</p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;left: 44%; bottom: 29%; ">
-<p>Neurtal Network</p>
+<p>Neural Network</p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 43%; right: 22%; ">
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
@@ -2221,7 +2221,7 @@ tr:nth-child(4) {
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 60px;top: 25%; left: 40%; ">
-<p><strong>Control</strong> : Ambiant air temperature (~ 20°C)</p>
+<p><strong>Control</strong> : Ambient air temperature (~ 20°C)</p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="2" data-id="txt1" style="font-size: 60px;top: 41%; left: 40%; ">
 <p><strong>Moderate Heatwave</strong> : 35°C during diurnal low tides during <strong>X</strong> days</p>
@@ -2439,7 +2439,7 @@ tr:nth-child(4) {
 <ul>
 <li><strong>June 2023</strong> :
 <ul>
-<li>Learning and Intercalibration exercice with the EPHE Dinard and LeCNAM Cherbourg</li>
+<li>Learning and Intercalibration exercise with the EPHE Dinard and LeCNAM Cherbourg</li>
 </ul></li>
 </ul>
 </div>
