--- a/index.html
+++ b/index.html
@@ -1814,7 +1814,7 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-in" data-fragment-index="3" data-id="arrow" style="top: 43%; right: 22%; ">
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="3" data-id="DISCOV" style="top: 30%; right: 0%; ">
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 30%; right: 0%; ">
 <p><img data-src="Images/Sentinel2.png" height="300"></p>
 </div>
 </section>
